--- a/custom-build-ckeditor/package.json
+++ b/custom-build-ckeditor/package.json
@@ -27,7 +27,8 @@
     "@ckeditor/ckeditor5-paste-from-office": "41.1.0",
     "@ckeditor/ckeditor5-table": "41.1.0",
     "@ckeditor/ckeditor5-typing": "41.1.0",
-    "@ckeditor/ckeditor5-undo": "41.1.0"
+    "@ckeditor/ckeditor5-undo": "41.1.0",
+    "@ckeditor/ckeditor5-upload": "^41.1.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "41.1.0",
