--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "14.1.0",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
